--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <title></title>
-  <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <head>
+    <title></title>
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href='styles/main.css' rel='stylesheet' type="text/css">
+    <script src="vendor/angular.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+  </head>
 
-  <link href='styles/main.css' rel='stylesheet' type="text/css">
-</head>
-<body ng-app="todoListApp">
+  <body ng-app="todoListApp">
 
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">AngularJS</a>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#/">AngularJS</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="#/test1">Test 1</a></li>
+          <li><a href="#/test2">Test 2</a></li>
+        </ul>
       </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-      </ul>
-    </div>
-  </nav>
+    </nav>
 
-  <div ng-view></div>
+    <div ng-view></div>
 
-  <script src="vendor/angular.js" type="text/javascript"></script>
-  <script src="scripts/app.js" type="text/javascript"></script>
-  <script src="scripts/controllers/mainctrl.js" type="text/javascript"></script>
-  <script src="scripts/services/mainService.js" type="text/javascript"></script>
-</body>
+    <script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/controllers/mainctrl.js" type="text/javascript"></script>
+    <script src="scripts/services/mainService.js" type="text/javascript"></script>
+  </body>
 </html>
