--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
     </nav>
 
+    <!-- NG VIEW  -->
     <div ng-view></div>
 
     <script src="scripts/app.js" type="text/javascript"></script>
