--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <title></title>
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:500,300,700,400' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href='styles/main.css' rel='stylesheet' type="text/css">
+    <link href="styles/books.css" rel="stylesheet" type="text/css">
     <script src="vendor/angular.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
   </head>
@@ -17,8 +20,8 @@
           <a class="navbar-brand" href="#/">AngularJS</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="#/test1">Test 1</a></li>
-          <li><a href="#/test2">Test 2</a></li>
+          <li><a href="#/books">Books</a></li>
+          <li><a href="#/contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -28,6 +31,7 @@
 
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/controllers/mainctrl.js" type="text/javascript"></script>
+    <script src="scripts/controllers/booksCtrl.js" type="text/javascript"></script>
     <script src="scripts/services/mainService.js" type="text/javascript"></script>
   </body>
 </html>
