--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <div ng-view></div>
 
     <script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/angular-auto-validate/dist/jcs-auto-validate.min.js" ></script>
     <script src="scripts/controllers/mainctrl.js" type="text/javascript"></script>
     <script src="scripts/controllers/booksCtrl.js" type="text/javascript"></script>
+    <script src="scripts/controllers/MinMaxCtrl.js" type="text/javascript"></script>
     <script src="scripts/services/mainService.js" type="text/javascript"></script>
   </body>
 </html>
